// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch defaultChecked 1`] = `
<span
  class="za-switch theme-primary checked"
>
  <input
    checked=""
    class="za-switch-input"
    type="checkbox"
  />
</span>
`;

exports[`Switch renders correctly 1`] = `
<span
  class="za-switch theme-primary"
>
  <input
    class="za-switch-input"
    type="checkbox"
  />
</span>
`;
